--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.6.3",
+    "vuetify": "^2.6.14",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -22,13 +22,14 @@
     "@vue/cli-plugin-vuex": "^4.5.15",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^3.2.3",
     "push-dir": "^0.4.1",
-    "sass": "^1.32.13",
-    "sass-loader": "^12.4.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
