--- a/package.json
+++ b/package.json
@@ -5,32 +5,53 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
-    "@jamesives/github-pages-deploy-action": "^4.2.3",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "@jamesives/github-pages-deploy-action": "^4.4.1",
+    "core-js": "^3.30.0",
+    "vue": "^2.7.14",
+    "vue-router": "^3.6.5",
     "vuetify": "^2.6.14",
     "vuex": "^3.4.0"
   },
+  "peerDependencies": {
+    "@babel/core": "7.x",
+    "jest": "^24.x",
+    "vue": "^2.x",
+    "vue-template-compiler": "^2.x"
+  },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.15",
-    "@vue/cli-plugin-vuex": "^4.5.15",
-    "@vue/cli-service": "~4.5.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^4.5.19",
+    "@vue/cli-plugin-router": "^4.5.19",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^4.5.19",
+    "@vue/cli-service": "^4.5.19",
+    "@vue/test-utils": "1.1.3",
+    "@vue/vue2-jest": "^29.2.3",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.5.0",
     "babel-plugin-transform-require-ignore": "^0.1.1",
-    "deepmerge": "^4.2.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "deepmerge": "^4.3.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-vue": "^9.10.0",
     "gh-pages": "^3.2.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-serializer-vue": "^3.1.0",
+    "jest-transform-stub": "^2.0.0",
     "push-dir": "^0.4.1",
-    "sass": "^1.60.0",
-    "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.61.0",
+    "sass-loader": "^10.4.1",
+    "vue-jest": "^3.0.7",
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
